tests/fixtures/invalid/bytes_div_float.py
# Cannot divide Bytes and Float
x: float = b"hello" / 1.0
